Added basic info to document

--- a/seminar.tex
+++ b/seminar.tex
@@ -20,10 +20,10 @@
 %% ---------------------------------
 
 %% Name of the author
-\author{My Name}
+\author{Tim Engbrocks}
 
 %% Title (and possibly subtitle) of the thesis
-\title{My Seminar Topic}
+\title{Optimization approaches for Self-Adaptive Systems}
 
 %% Type of the thesis 
 % \thesistype{Seminar Thesis}
@@ -32,7 +32,7 @@
 % \myinstitute{Institute for \dots}
 
 %% The advisors are PhD Students or Postdocs
-\advisor{M.Sc. My Advisor}
+\advisor{Dipl.-Inform. Martina Rapp}
 
 \settitle
 
