Abgabe Literaturliste und Gliederung

--- a/sections/abstract.tex
+++ b/sections/abstract.tex
@@ -1,13 +1,7 @@
-%% LaTeX2e class for seminar theses
-%% sections/abstract_en.tex
-%% 
-%% Karlsruhe Institute of Technology
-%% Institute for Program Structures and Data Organization
-%% Chair for Software Design and Quality (SDQ)
-%%
-%% Dr.-Ing. Erik Burger
-%% burger@kit.edu
-%%
-%% Version 1.0.2, 2020-05-07
-
-English abstract.
+\begin{abstract}
+    Content of the abstract: \begin{itemize}
+        \item Motivating Self-Adaptive Systems and their need for optimization.
+        \item Motivating the need for a classification of optimization approaches for Self-Adaptive Systems.
+        \item The scope and goal of this paper.
+    \end{itemize}
+\end{abstract}
