--- a/sections/conclusion.tex
+++ b/sections/conclusion.tex
@@ -1,14 +1,11 @@
-%% LaTeX2e class for seminar theses
-%% sections/conclusion.tex
-%% 
-%% Karlsruhe Institute of Technology
-%% Institute for Program Structures and Data Organization
-%% Chair for Software Design and Quality (SDQ)
-%%
-%% Dr.-Ing. Erik Burger
-%% burger@kit.edu
-%%
-%% Version 1.0.2, 2020-05-07
-
+\newpage
 \section{Conclusion}
 \label{ch:Conclusion}
+
+\begin{itemize}
+    \item Recommending future research directions: \begin{itemize}
+        \item Applying the proposed classification to more existing optimization approaches.
+        \item Possible directions for new optimization approaches.
+    \end{itemize}
+    \item What are the limitations of this paper?
+\end{itemize}
