--- a/seminar.tex
+++ b/seminar.tex
@@ -23,7 +23,7 @@
 \author{Tim Engbrocks}
 
 %% Title (and possibly subtitle) of the thesis
-\title{Optimization approaches for Self-Adaptive Systems}
+\title{Optimization Approaches for Self-Adaptive Systems}
 
 %% Type of the thesis 
 % \thesistype{Seminar Thesis}
@@ -77,17 +77,11 @@
 %% The text is included from the following files:
 %% - sections/abstract
 
-\begin{abstract}
 \input{sections/abstract.tex}
-\end{abstract}
-
-%% -----------------
-%% |   Main part   |
-%% -----------------
-
-
 \input{sections/introduction.tex}
-\input{sections/content.tex}
+\input{sections/sas_classification.tex}
+\input{sections/proposal.tex}
+\input{sections/existing.tex}
 \input{sections/conclusion.tex}
 
 %% --------------------
