--- a/sections/declaration.tex
+++ b/sections/declaration.tex
@@ -25,7 +25,7 @@ unverändert oder mit Änderungen entnommen wurde.}
 %% ---------------------------------------------
 %% | Replace PLACE and DATE with actual values |
 %% ---------------------------------------------
-\textbf{PLACE, DATE}
+\textbf{Karlsruhe, 10.05.2021}
 \vspace{1.5cm}
  
 \dotfill\hspace*{8.0cm}\\
