--- a/sections/abstract.tex
+++ b/sections/abstract.tex
@@ -1,7 +1,9 @@
-\begin{abstract}
-    Content of the abstract: \begin{itemize}
-        \item Motivating Self-Adaptive Systems and their need for optimization.
-        \item Motivating the need for a classification of optimization approaches for Self-Adaptive Systems.
-        \item The scope and goal of this paper.
-    \end{itemize}
-\end{abstract}
+% ABSTRACT WIRD ALS LETZTES GESCHRIEBEN!
+
+% \begin{abstract}
+%     Content of the abstract: \begin{itemize}
+%         \item Motivating Self-Adaptive Systems and their need for optimization.
+%         \item Motivating the need for a classification of optimization approaches for Self-Adaptive Systems.
+%         \item The scope and goal of this paper.
+%     \end{itemize}
+% \end{abstract}
