--- a/sections/conclusion.tex
+++ b/sections/conclusion.tex
@@ -2,10 +2,17 @@
 \section{Conclusion}
 \label{ch:Conclusion}
 
-\begin{itemize}
-    \item Recommending future research directions: \begin{itemize}
-        \item Applying the proposed classification to more existing optimization approaches.
-        \item Possible directions for new optimization approaches.
-    \end{itemize}
-    \item What are the limitations of this paper?
-\end{itemize}
+% TODO:
+% - Is it complete?
+% - Could it be improved?
+% - Limits of this paper
+% - Needs to be applied to more existing approaches
+% - Are there any areas lacking research?
+
+% \begin{itemize}
+%     \item Recommending future research directions: \begin{itemize}
+%         \item Applying the proposed classification to more existing optimization approaches.
+%         \item Possible directions for new optimization approaches.
+%     \end{itemize}
+%     \item What are the limitations of this paper?
+% \end{itemize}
