--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -2,18 +2,33 @@
 \section{Introduction}
 \label{ch:Introduction}
 
-\begin{itemize}
-    \item What are Self-Adaptive Systems?
-    \item Why are Self-Adaptive Systems useful?
-    \item What are the limits of classical Self-Adaptive Systems?
-    \item The need for optimizing Self-Adaptive Systems.
-\end{itemize}
+% TODO:
+% - Today large systems ....
+% - Need for SAS
+% - What are the limits
+% - The need for optimization that results from those limits
+% - The need to classify these approaches
 
-\paragraph*{Literature for this section:} \begin{itemize}
-    \item "The vision of autonomic computing" \cite{1160055}
-    \item "An Introduction to Self-adaptive Systems: A Contemporary Software Engineering Perspective" \cite{sasIntroduction}
-    \item "Software Engineering for Self-Adaptive Systems: A Research Roadmap" \cite{Cheng2009}
-    \item "Software Engineering for Self-Adaptive Systems: A Second Research Roadmap" \cite{deLemos2013}
-    \item "Claims and supporting evidence for self-adaptive systems: A literature study" \cite{6224395}
-    \item "Self-Adaptive Software: Landscape and Research Challenges" \cite{10.1145/1516533.1516538}
-\end{itemize}
+% \begin{itemize}
+%     \item What are Self-Adaptive Systems?
+%     \item Why are Self-Adaptive Systems useful?
+%     \item What are the limits of classical Self-Adaptive Systems?
+%     \item The need for optimizing Self-Adaptive Systems.
+% \end{itemize}
+
+% \paragraph*{Literature for this section:} \begin{itemize}
+%     \item "The vision of autonomic computing" \cite{VisionOfAutonomicComputing}
+%     \item "An Introduction to Self-adaptive Systems: A Contemporary Software Engineering Perspective" \cite{SasIntroduction}
+%     \item "Software Engineering for Self-Adaptive Systems: A Research Roadmap" \cite{ResearchRoadmap}
+%     \item "Software Engineering for Self-Adaptive Systems: A Second Research Roadmap" \cite{SecondResearchRoadmap}
+%     \item "Claims and supporting evidence for self-adaptive systems: A literature study" \cite{ClaimsAndSupportingEvidence}
+%     \item "Self-Adaptive Software: Landscape and Research Challenges" \cite{LandscapeAndResearchChallenges}
+% \end{itemize}
+
+% TODO: What are Self-Adaptive Systems?}
+
+% TODO: Why are Self-Adaptive Systems useful?}
+
+% TODO: What are the limits of classical Self-Adaptive Systems?}
+
+% TODO: The need for optimizing Self-Adaptive Systems}
