--- a/seminar.bib
+++ b/seminar.bib
@@ -1,4 +1,4 @@
-@ARTICLE{1160055,  
+@ARTICLE{VisionOfAutonomicComputing,  
   author={Kephart, J.O. and Chess, D.M.},  
   journal={Computer},   
   title={The vision of autonomic computing},   
@@ -9,7 +9,7 @@
   doi={10.1109/MC.2003.1160055}
 }
 
-@book{sasIntroduction,
+@book{SasIntroduction,
   title     = {An Introduction to Self-adaptive Systems: A Contemporary Software Engineering Perspective},
   author    = {Danny Weyns},
   year      = 2020,
@@ -18,7 +18,7 @@
   isbn      = {978-1119574941},
 }
 
-@Inbook{Cheng2009,
+@Inbook{ResearchRoadmap,
   author="Cheng, Betty H. C.
     and de Lemos, Rog{\'e}rio
     and Giese, Holger
@@ -65,7 +65,7 @@
   url="https://doi.org/10.1007/978-3-642-02161-9_1"
 }
 
-@Inbook{deLemos2013,
+@Inbook{SecondResearchRoadmap,
 author="de Lemos, Rog{\'e}rio
     and Giese, Holger
     and M{\"u}ller, Hausi A.
@@ -124,7 +124,7 @@ author="de Lemos, Rog{\'e}rio
   url="https://doi.org/10.1007/978-3-642-35813-5_1"
 }
 
-@INPROCEEDINGS{6224395,  
+@INPROCEEDINGS{ClaimsAndSupportingEvidence,  
   author={Weyns, Danny and Iftikhar, M. Usman and Malek, Sam and Andersson, Jesper},  
   booktitle={2012 7th International Symposium on Software Engineering for Adaptive and Self-Managing Systems (SEAMS)},   
   title={Claims and supporting evidence for self-adaptive systems: A literature study},   
@@ -135,7 +135,7 @@ author="de Lemos, Rog{\'e}rio
   doi={10.1109/SEAMS.2012.6224395}
 }
 
-@article{10.1145/1516533.1516538,
+@article{LandscapeAndResearchChallenges,
   author = {Salehie, Mazeiar and Tahvildari, Ladan},
   title = {Self-Adaptive Software: Landscape and Research Challenges},
   year = {2009},
@@ -155,7 +155,7 @@ author="de Lemos, Rog{\'e}rio
   keywords = {self-adaptive software, survey, Adaptation processes, self-properties, research challenges}
 }
 
-@ARTICLE{9249012,  
+@ARTICLE{ApplicationOfMachineLearning,  
   author={Saputri, Theresia Ratih Dewi and Lee, Seok-Won},  
   journal={IEEE Access},   
   title={The Application of Machine Learning in Self-Adaptive Systems: A Systematic Literature Review},   
@@ -166,7 +166,7 @@ author="de Lemos, Rog{\'e}rio
   doi={10.1109/ACCESS.2020.3036037}
 }
 
-@INPROCEEDINGS{7573157,  
+@INPROCEEDINGS{ComparisonOfSelfImprovement,  
   author={Krupitzer, Christian and Roth, Felix Maximilian and Pfannemüller, Martin and Becker, Christian},  
   booktitle={2016 IEEE International Conference on Autonomic Computing (ICAC)},   
   title={Comparison of Approaches for Self-Improvement in Self-Adaptive Systems},   
@@ -177,7 +177,7 @@ author="de Lemos, Rog{\'e}rio
   doi={10.1109/ICAC.2016.18}
 }
 
-@article{KRUPITZER2015184,
+@article{SurveyOnEngineeringApproaches,
   title = {A survey on engineering approaches for self-adaptive systems},
   journal = {Pervasive and Mobile Computing},
   volume = {17},
@@ -192,7 +192,7 @@ author="de Lemos, Rog{\'e}rio
   abstract = {The complexity of information systems is increasing in recent years, leading to increased effort for maintenance and configuration. Self-adaptive systems (SASs) address this issue. Due to new computing trends, such as pervasive computing, miniaturization of IT leads to mobile devices with the emerging need for context adaptation. Therefore, it is beneficial that devices are able to adapt context. Hence, we propose to extend the definition of SASs and include context adaptation. This paper presents a taxonomy of self-adaptation and a survey on engineering SASs. Based on the taxonomy and the survey, we motivate a new perspective on SAS including context adaptation.}
 }
 
-@INPROCEEDINGS{8599527,
+@INPROCEEDINGS{TaxonomyOfSelfSoftware,
   author={Raibulet, Claudia},
   booktitle={2018 IEEE 3rd International Workshops on Foundations and Applications of Self* Systems (FAS*W)}, 
   title={Towards a Taxonomy for the Evaluation of Self-* Software}, 
@@ -203,7 +203,7 @@ author="de Lemos, Rog{\'e}rio
   doi={10.1109/FAS-W.2018.00020}
 }
 
-@INPROCEEDINGS{5298493,  
+@INPROCEEDINGS{DissectingSelfProperties,  
   author={Berns, Andrew and Ghosh, Sukumar},  
   booktitle={2009 Third IEEE International Conference on Self-Adaptive and Self-Organizing Systems},   
   title={Dissecting Self-* Properties},   
@@ -214,7 +214,7 @@ author="de Lemos, Rog{\'e}rio
   doi={10.1109/SASO.2009.25}
 }
 
-@inproceedings{10.1145/1882291.1882296,
+@inproceedings{FUSION,
   author = {Elkhodary, Ahmed and Esfahani, Naeem and Malek, Sam},
   title = {FUSION: A Framework for Engineering Self-Tuning Self-Adaptive Software Systems},
   year = {2010},
@@ -232,7 +232,7 @@ author="de Lemos, Rog{\'e}rio
   series = {FSE '10}
 }
 
-@inproceedings{tesauro2004multi,
+@inproceedings{MultiAgentSystem,
   title={A multi-agent systems approach to autonomic computing},
   author={Tesauro, Gerald and Chess, David M and Walsh, William E and Das, Rajarshi and Segal, Alla and Whalley, Ian and Kephart, Jeffrey O and White, Steve R},
   booktitle={Proceedings of the Third International Joint Conference on Autonomous Agents and Multiagent Systems-Volume 1},
@@ -241,7 +241,7 @@ author="de Lemos, Rog{\'e}rio
   organization={Citeseer}
 }
 
-@INPROCEEDINGS{6606552,  
+@INPROCEEDINGS{LearningRevisedModels,  
   author={Sykes, Daniel and Corapi, Domenico and Magee, Jeff and Kramer, Jeff and Russo, Alessandra and Inoue, Katsumi},  
   booktitle={2013 35th International Conference on Software Engineering (ICSE)},   
   title={Learning revised models for planning in adaptive systems},   
@@ -252,7 +252,7 @@ author="de Lemos, Rog{\'e}rio
   doi={10.1109/ICSE.2013.6606552}
 }
 
-@article{GRZONKA20181106,
+@article{ImprovingCloudPerformanceAndSecurity,
   title = {Using a multi-agent system and artificial intelligence for monitoring and improving the cloud performance and security},
   journal = {Future Generation Computer Systems},
   volume = {86},
@@ -266,7 +266,7 @@ author="de Lemos, Rog{\'e}rio
   abstract = {Cloud Computing is one of the most intensively developed solutions for large-scale distributed processing. Effective use of such environments, management of their high complexity and ensuring appropriate levels of Quality of Service (QoS) require advanced monitoring systems. Such monitoring systems have to support the scalability, adaptability and reliability of Cloud. Most of existing monitoring systems do not incorporate any Artificial Intelligence (AI) algorithms for supporting the change inside the task stream or environment itself. They focus only on monitoring or enabling the control of the system as a part of a separated service. An effective monitoring system for the Cloud environment should gather information about all stages of tasks processing and should actively control the monitored environment. In this paper, we present a novel Multi-Agent System based Cloud Monitoring (MAS-CM) model that supports the performance and security of tasks gathering, scheduling and execution processes in large-scale service-oriented environments. Such models are explicitly designed to control the performance and security objectives of the environment. In our work, we focus on prevention of unauthorized task injection and modification, optimization of scheduling process and maximization of resource usage. We evaluate the effectiveness of MAS-CM empirically using an evolutionary driven implementation of Independent Batch Scheduler and FastFlow framework. The obtained results demonstrate the effectiveness of the proposed approach and the performance improvement.}
 }
 
-@article{DONASCIMENTO2017161,
+@article{FIoT,
   title = {FIoT: An agent-based framework for self-adaptive and self-organizing applications based on the Internet of Things},
   journal = {Information Sciences},
   volume = {378},
@@ -278,4 +278,37 @@ author="de Lemos, Rog{\'e}rio
   author = {Nathalia Moraes {do Nascimento} and Carlos José Pereira {de Lucena}},
   keywords = {Internet of things (IoT), Multi-agent system, Machine learning, Self-organizing, Self-adaptive, Quantified things},
   abstract = {Billions of resources, such as cars, clothes, household appliances and even food are being connected to the Internet forming the Internet of Things (IoT). Subsets of these resources can work together to create new self-regulating IoT applications such as smart health, smart communities and smart homes. However, several challenging issues need to be addressed before this vision of applications based on IoT concepts becomes a reality. Because many IoT applications will be distributed over a large number of interacting devices, centralized control will not be possible and so open problems will need to be solved that relate to building locally operating self-organizing and self-adaptive systems. As an initial step in creating IoT applications with these features, this paper presents a Framework for IoT (FIoT). The approach is based on Multi-Agent Systems (MAS) and Machine Learning Techniques, such as neural networks and evolutionary algorithms. To illustrate the use of FIoT, the paper contains two different IoT applications: (i) Quantified Things and (ii) Smart traffic control. We show how flexible points of our framework are instantiated to generate these IoT application.}
+}
+
+% NEW REFERENCES
+
+@article{FORMS,
+  author = {Weyns, Danny and Malek, Sam and Andersson, Jesper},
+  title = {FORMS: Unifying Reference Model for Formal Specification of Distributed Self-Adaptive Systems},
+  year = {2012},
+  issue_date = {April 2012},
+  publisher = {Association for Computing Machinery},
+  address = {New York, NY, USA},
+  volume = {7},
+  number = {1},
+  issn = {1556-4665},
+  url = {https://doi.org/10.1145/2168260.2168268},
+  doi = {10.1145/2168260.2168268},
+  abstract = {The challenges of pervasive and mobile computing environments, which are highly dynamic and unpredictable, have motivated the development of self-adaptive software systems. Although noteworthy successes have been achieved on many fronts, the construction of such systems remains significantly more challenging than traditional systems. We argue this is partially because researchers and practitioners have been struggling with the lack of a precise vocabulary for describing and reasoning about the key architectural characteristics of self-adaptive systems. Further exacerbating the situation is the fact that existing frameworks and guidelines do not provide an encompassing perspective of the different types of concerns in this setting. In this article, we present a comprehensive reference model, entitled FOrmal Reference Model for Self-adaptation (FORMS), that targets both issues. FORMS provides rigor in the manner such systems can be described and reasoned about. It consists of a small number of formally specified modeling elements that correspond to the key concerns in the design of self-adaptive software systems, and a set of relationships that guide their composition. We demonstrate FORMS's ability to precisely describe and reason about the architectural characteristics of distributed self-adaptive software systems through its application to several existing systems. FORMS's expressive power gives it a potential for documenting reusable architectural solutions (e.g., architectural patterns) to commonly encountered problems in this area.},
+  journal = {ACM Trans. Auton. Adapt. Syst.},
+  month = may,
+  articleno = {8},
+  numpages = {61},
+  keywords = {self-adaptation, Formal methods, autonomic computing}
+}
+
+@INPROCEEDINGS{SelfImprovementSAS,  
+  author={Krupitzer, Christian and Roth, Felix Maximilian and Pfannemüller, Martin and Becker, Christian},  
+  booktitle={2016 IEEE International Conference on Autonomic Computing (ICAC)},   
+  title={Comparison of Approaches for Self-Improvement in Self-Adaptive Systems},   
+  year={2016},  
+  volume={},  
+  number={},  
+  pages={308-314},  
+  doi={10.1109/ICAC.2016.18}
 }
